--- a/src/components/css/Board/board.css
+++ b/src/components/css/Board/board.css
@@ -1,8 +1,16 @@
 .board {
-  width: 400px;
-  height: 400px;
+  width: 300px;
+  height: 300px;
+  margin: 10px auto;
+  padding: 0px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+}
+
+.board-heading {
+  color: white;
+  text-align: center;
+  margin: 10px 0px;
 }
