--- a/src/components/css/Board/cell.css
+++ b/src/components/css/Board/cell.css
@@ -1,9 +1,13 @@
 .cell {
   /* dimensions*/
-  width: 100px;
-  height: 100px;
-  border-radius: 34px;
+  width: 80px;
+  height: 80px;
+  border-radius: 20px;
 
+  /* alignments */
+  display: flex;
+  justify-content: center;
+  align-items: center;
   /*decoration*/
   background: #2992b3;
 
@@ -12,7 +16,7 @@
 }
 
 .cell:hover {
-  width: 105px;
-  height: 105px;
+  width: 85px;
+  height: 85px;
   cursor: pointer;
 }
