--- a/src/components/css/Board/row.css
+++ b/src/components/css/Board/row.css
@@ -1,8 +1,9 @@
 .row {
   /*dimensions */
-  width: 340px;
-  height: 100px;
+  width: 100%;
+  height: 80px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
+  margin-bottom: 10px;
 }
