optimized the store by seperating the game state and dispatch

--- a/src/components/css/Board/game_info.css
+++ b/src/components/css/Board/game_info.css
@@ -5,3 +5,19 @@
   justify-content: space-around;
   color: white;
 }
+
+.player-active {
+  animation: showActive 2s infinite;
+}
+
+@keyframes showActive {
+  0% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
